# khemu

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: guest.rs  host.rs  ir.rs  lib.rs  main.rs  runtime.rs  util.rs
src/guest/: arm64.rs
src/guest/arm64/: b_exc_sys.rs  data_proc_imm.rs  data_proc_reg.rs  data_proc_simd_fp.rs  facility.rs  ldst.rs  sve.rs  system.rs
src/host/: arm64.rs  dump_ir.rs  llvm.rs
src/host/llvm/: codegen.rs
src/ir/: op.rs  storage.rs
src/ir/op/: meta.rs  opt.rs
src/runtime/: loader.rs
