[package]
name = "khemu"
version = "0.1.0"
authors = ["KireinaHoro <i@jsteward.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "macros" }
num-traits = "0.2"
paste = "0.1"
bitflags = "1.2"
goblin = "0.2"
log = "0.4"
env_logger = "0.7"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
memmap = "0.7"
