[package]
name = "macros"
version = "0.0.0"
authors = ["KireinaHoro <i@jsteward.moe>"]
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { git = "https://github.com/dtolnay/syn.git", features = ["visit", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
